--- a/.github/workflows/FirstAction.yml
+++ b/.github/workflows/FirstAction.yml
@@ -10,7 +10,7 @@ jobs:
         id: DTriskscore
         uses:  R-dado/SBOM-Dependency-Track-Check@main
         with:
-          url: 'http://localhost:8080/'
+          url: 'http://46.188.8.14:23190/'
           key: '${{ secrets.DTKEY }}'
 
       - name: Riskscore output
